--- a/t4_DistributedMemorySolution/pom.xml
+++ b/t4_DistributedMemorySolution/pom.xml
@@ -27,5 +27,11 @@
             <version>2.0.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
